<resources>
    <string name="app_name">BookCrossing</string>
    <string name="Welcome">Добро пожаловать в Книговерть!</string>
    <string name="Logo1">КНИГО</string>
    <string name="Logo2">ВЕРТЬ</string>
    <string name="In">Войти</string>
    <string name="Guest">Продолжить как гость</string>
    <string name="Regist">Зарегистрироваться</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="quest1">Еще нет аккаунта?</string>
    <string name="Reg">Зарегистрироваться</string>
    <string name="ToIn">Войдите в аккаунт, чтобы выставить свою книгу!</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="addBook">Добавить книгу</string>
    <string name="addBook2">Добавление книги</string>
    <string name="withoutLog">Продолжить без входа</string>
    <string name="LogIn">Вход в аккаунт</string>
    <string name="logInText">Войти в аккаунт</string>
    <string name="Login">Логин</string>
    <string name="Name">Имя Фамилия</string>
    <string name="password">Пароль</string>
    <string name="Password2">Повторите пароль</string>
    <string name="rusPass">Пароль</string>
    <string name="rusLog">Логин</string>
    <string name="bookTitle">Название книги</string>
    <string name="bookPhoto">Добавить фото книги</string>
    <string name="author">Автор</string>
    <string name="genre">Жанр</string>
    <string name="description">Описание</string>
    <string name="plus">+</string>
    <string name="editing">Редактирование профиля</string>
    <string name="save">Сохранить изменения</string>
    <string name="telegram">telegram link</string>
    <string name="whatsapp">WhatsApp link</string>
    <string name="valeria">Валерия Тимофеева</string>
    <string name="number">+7 (965) 745-88-88</string>
    <string name="exitText">Выйти</string>
    <string name="added_books">Выставленные книги</string>
    <string name="bookcrosser">Буккроссер:</string>
    <string name="bookcrosser_name">Валерия Тимофеева</string>
    <string name="description_book">Описание:</string>
    <string name="allBooks">Все книги</string>
</resources>